--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html data-theme="winter">
- 
+ <!--Main landing page-->
 <head>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.0.1/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -78,7 +78,7 @@
     </div>
   </header>
 
-  <!-- Hero -->
+  <!-- focused -->
   <main class="hero flex-1 bg-base-200">
     <div class="hero-content justify-between w-full text-content flex-col lg:flex-row-reverse">
       <img src="img1.png" class="w-full rounded-lg md:w-1/2 md:-m-4" />
